--- a/AutoMall/ViewControllers/Upkeep/CarInfoListVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoListVC.xib
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CarInfoListVC">
             <connections>
                 <outlet property="infoTableView" destination="wPZ-Rq-P4m" id="Dck-c4-Nrj"/>
+                <outlet property="mySearchBar" destination="9XF-VI-ikG" id="uK9-ad-sKz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wPZ-Rq-P4m">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="separatorColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
@@ -29,15 +30,29 @@
                         <outlet property="delegate" destination="-1" id="acD-yq-eVw"/>
                     </connections>
                 </tableView>
+                <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="9XF-VI-ikG">
+                    <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="WFC-aR-nty"/>
+                    </constraints>
+                    <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="FLZ-p3-yep"/>
+                    </connections>
+                </searchBar>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="wPZ-Rq-P4m" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="99k-cr-2xN"/>
                 <constraint firstItem="wPZ-Rq-P4m" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GJC-f9-gt5"/>
                 <constraint firstAttribute="trailing" secondItem="wPZ-Rq-P4m" secondAttribute="trailing" id="Ggc-xi-h3x"/>
                 <constraint firstAttribute="bottom" secondItem="wPZ-Rq-P4m" secondAttribute="bottom" id="YAg-7k-F9c"/>
+                <constraint firstAttribute="trailing" secondItem="9XF-VI-ikG" secondAttribute="trailing" id="bmL-9O-4ER"/>
+                <constraint firstItem="9XF-VI-ikG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="gLx-gK-S6j"/>
+                <constraint firstItem="wPZ-Rq-P4m" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="44" id="spm-wp-hd3"/>
+                <constraint firstItem="9XF-VI-ikG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="uwT-zw-reV"/>
             </constraints>
-            <point key="canvasLocation" x="-31" y="34"/>
+            <point key="canvasLocation" x="-264" y="35"/>
         </view>
     </objects>
 </document>
