--- a/AutoMall/ViewControllers/Upkeep/CarInfoListVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoListVC.xib
@@ -21,15 +21,6 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wPZ-Rq-P4m">
-                    <rect key="frame" x="0.0" y="44" width="375" height="623"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="separatorColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="odw-iE-m49"/>
-                        <outlet property="delegate" destination="-1" id="acD-yq-eVw"/>
-                    </connections>
-                </tableView>
                 <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="9XF-VI-ikG">
                     <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -41,6 +32,15 @@
                         <outlet property="delegate" destination="-1" id="FLZ-p3-yep"/>
                     </connections>
                 </searchBar>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wPZ-Rq-P4m">
+                    <rect key="frame" x="0.0" y="108" width="375" height="559"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="separatorColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="odw-iE-m49"/>
+                        <outlet property="delegate" destination="-1" id="acD-yq-eVw"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -49,10 +49,10 @@
                 <constraint firstAttribute="bottom" secondItem="wPZ-Rq-P4m" secondAttribute="bottom" id="YAg-7k-F9c"/>
                 <constraint firstAttribute="trailing" secondItem="9XF-VI-ikG" secondAttribute="trailing" id="bmL-9O-4ER"/>
                 <constraint firstItem="9XF-VI-ikG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="gLx-gK-S6j"/>
-                <constraint firstItem="wPZ-Rq-P4m" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="44" id="spm-wp-hd3"/>
+                <constraint firstItem="wPZ-Rq-P4m" firstAttribute="top" secondItem="9XF-VI-ikG" secondAttribute="bottom" id="rhU-9X-7WY"/>
                 <constraint firstItem="9XF-VI-ikG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="uwT-zw-reV"/>
             </constraints>
-            <point key="canvasLocation" x="-264" y="35"/>
+            <point key="canvasLocation" x="-264.5" y="34.5"/>
         </view>
     </objects>
 </document>
