--- a/AutoMall/ViewControllers/Login_Register/LoginViewController.xib
+++ b/AutoMall/ViewControllers/Login_Register/LoginViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,14 +20,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mpa-R4-nb0">
-                    <rect key="frame" x="0.0" y="64" width="375" height="80"/>
+                    <rect key="frame" x="0.0" y="64" width="768" height="80"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sag-Bn-Ab6">
-                            <rect key="frame" x="20" y="39.5" width="335" height="1"/>
+                            <rect key="frame" x="20" y="39.5" width="748" height="1"/>
                             <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="6h4-OG-hX9" customClass="NSLayoutConstraintOnePixelLine"/>
@@ -35,11 +35,6 @@
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                             <nil key="highlightedColor"/>
-                            <variation key="default">
-                                <mask key="constraints">
-                                    <exclude reference="6h4-OG-hX9"/>
-                                </mask>
-                            </variation>
                             <variation key="widthClass=compact">
                                 <mask key="constraints">
                                     <include reference="6h4-OG-hX9"/>
@@ -47,7 +42,7 @@
                             </variation>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="填写密码" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Gvk-aC-VyW" customClass="CustomTextField">
-                            <rect key="frame" x="90" y="39.5" width="230" height="40"/>
+                            <rect key="frame" x="90" y="44.5" width="623" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="3v0-xb-KYP">
                                     <variation key="widthClass=compact" constant="40"/>
@@ -55,11 +50,6 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" returnKeyType="go" secureTextEntry="YES"/>
-                            <variation key="default">
-                                <mask key="constraints">
-                                    <exclude reference="3v0-xb-KYP"/>
-                                </mask>
-                            </variation>
                             <variation key="widthClass=compact">
                                 <mask key="constraints">
                                     <include reference="3v0-xb-KYP"/>
@@ -67,17 +57,12 @@
                             </variation>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入手机号" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4Qv-4A-ANv" customClass="CustomTextField">
-                            <rect key="frame" x="90" y="0.0" width="265" height="40"/>
+                            <rect key="frame" x="90" y="0.0" width="658" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="Skh-PA-jeg"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="next"/>
-                            <variation key="default">
-                                <mask key="constraints">
-                                    <exclude reference="Skh-PA-jeg"/>
-                                </mask>
-                            </variation>
                             <variation key="widthClass=compact">
                                 <mask key="constraints">
                                     <include reference="Skh-PA-jeg"/>
@@ -105,7 +90,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0u6-lz-VWD">
-                            <rect key="frame" x="330" y="47" width="25" height="25"/>
+                            <rect key="frame" x="723" y="47" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="DJF-Eq-G9a"/>
                                 <constraint firstAttribute="height" constant="25" id="duu-1a-xAk"/>
@@ -141,20 +126,6 @@
                         <constraint firstItem="4Qv-4A-ANv" firstAttribute="centerY" secondItem="PAS-do-p46" secondAttribute="centerY" id="yjn-Il-Qqz"/>
                         <constraint firstAttribute="bottom" secondItem="hKX-eD-4EF" secondAttribute="bottom" constant="10" id="zPE-qb-jYh"/>
                     </constraints>
-                    <variation key="default">
-                        <mask key="subviews">
-                            <exclude reference="sag-Bn-Ab6"/>
-                            <exclude reference="Gvk-aC-VyW"/>
-                            <exclude reference="4Qv-4A-ANv"/>
-                        </mask>
-                        <mask key="constraints">
-                            <exclude reference="gqC-N0-KAr"/>
-                            <exclude reference="Bq1-Nd-D8w"/>
-                            <exclude reference="gwQ-Sb-m5x"/>
-                            <exclude reference="oq8-dk-q7a"/>
-                            <exclude reference="g6p-VK-3lh"/>
-                        </mask>
-                    </variation>
                     <variation key="widthClass=compact">
                         <mask key="subviews">
                             <include reference="sag-Bn-Ab6"/>
@@ -171,7 +142,7 @@
                     </variation>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HKd-GO-t5H">
-                    <rect key="frame" x="293" y="218" width="62" height="30"/>
+                    <rect key="frame" x="686" y="218" width="62" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="jdG-8g-liB"/>
                     </constraints>
@@ -199,7 +170,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9g7-Wu-B6y">
-                    <rect key="frame" x="20" y="164" width="335" height="44"/>
+                    <rect key="frame" x="20" y="164" width="728" height="44"/>
                     <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="8P4-hr-GMG"/>
@@ -209,11 +180,6 @@
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="8P4-hr-GMG"/>
-                        </mask>
-                    </variation>
                     <variation key="widthClass=compact">
                         <mask key="constraints">
                             <include reference="8P4-hr-GMG"/>
@@ -224,18 +190,13 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您还可以使用手机验证码登录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wny-g0-RfX">
-                    <rect key="frame" x="101.5" y="258" width="172.5" height="21"/>
+                    <rect key="frame" x="298" y="258" width="172.5" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="2zk-m6-x8g"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="2zk-m6-x8g"/>
-                        </mask>
-                    </variation>
                     <variation key="widthClass=compact">
                         <mask key="constraints">
                             <include reference="2zk-m6-x8g"/>
@@ -243,7 +204,7 @@
                     </variation>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="thV-Sd-xAK">
-                    <rect key="frame" x="157" y="299" width="60" height="60"/>
+                    <rect key="frame" x="353.5" y="299" width="60" height="60"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="J7p-HH-6tf"/>
                         <constraint firstAttribute="height" constant="60" id="hb1-f7-iMw"/>
@@ -251,12 +212,6 @@
                     <state key="normal" image="phone_dl">
                         <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="J7p-HH-6tf"/>
-                            <exclude reference="hb1-f7-iMw"/>
-                        </mask>
-                    </variation>
                     <variation key="widthClass=compact">
                         <mask key="constraints">
                             <include reference="J7p-HH-6tf"/>
@@ -268,7 +223,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="验证码登录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Xd-tX-1Q4">
-                    <rect key="frame" x="154" y="370" width="66.5" height="21"/>
+                    <rect key="frame" x="350.5" y="370" width="66.5" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="M5F-Ua-HfH"/>
                     </constraints>
@@ -296,11 +251,6 @@
                 <constraint firstItem="9g7-Wu-B6y" firstAttribute="top" secondItem="mpa-R4-nb0" secondAttribute="bottom" constant="20" id="g8L-uy-RiJ"/>
                 <constraint firstItem="wny-g0-RfX" firstAttribute="top" secondItem="9g7-Wu-B6y" secondAttribute="bottom" constant="50" id="jks-7O-BQu"/>
             </constraints>
-            <variation key="default">
-                <mask key="subviews">
-                    <exclude reference="HKd-GO-t5H"/>
-                </mask>
-            </variation>
             <variation key="widthClass=compact">
                 <mask key="subviews">
                     <include reference="HKd-GO-t5H"/>
